--- a/src/my-recipes.html
+++ b/src/my-recipes.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Facorite Recipes</title>
+    <title>My Favorite Recipes</title>
 </head>
 <body>
-    I will work on this later.
+    I will work on this later. Maybe tommorrow.
 </body>
 </html>
