--- a/src/my-recipes.html
+++ b/src/my-recipes.html
@@ -4,8 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Favorite Recipes</title>
+
 </head>
+
 <body>
-    I will work on this later. Maybe tommorrow.
+     <h1>My 3 Most Favorite Recipes</h1>
+     <h2>Slow Cooker Beef on Rice</h2>
+     <h3>Ingredients</h3>
+
+     <ul>2 pounds beef chunks(aka: stew meat)</ul>
+     <ul>4 cups beef broth</ul>
+     <ul>1 onion, chopped</ul>
+     <ul>1 teaspoon Italian seasoning</ul>
+     <ul>1/4 cup cold water</ul>
+     <ul>3 tablespoons corn starch</ul>
+     <ul>4-6 cups brown or white rice</ul>
+     <ul>2-3 teaspoons salt</ul>
+     <ul>1 teaspoon black pepper</ul>
+
+     <h3>Instructions</h3>
+     <ol>Add beef, broth, and chopped onions to slow cooker. Sprinkle with salt, pepper, and Italian seasoning.</ol>
+     <ol>Cover and cook on low for 8 hours or on high for 4 hours.</ol>
+     <ol>About 10-15 minutes before serving, transfer slow cooker contents to a large stock pot and bring to a boil. Whisk together cold water and corn starch
+         , add to pot, and stir unitl thickened. Serve over rice and sprinkle with chopped parsley if desired.
+     </ol>
+
+     <h2>Easy Slow Cooker BBQ Ribs</h2>
+     <h3>Ingredients</h3>
+
+     <ul>4 teaspoons chili powder</ul>
+     <ul>3 teaspoons packed brown sugar</ul>
+     <ul>1 teaspoon cumin</ul>
+     <ul>1 teaspoon garlic powder</ul>
+     <ul>1/2 teaspoon onion powder</ul>
+     <ul>1/2 teaspoon black pepper</ul>
+     <ul>2-3 lbs pork ribs (side or back)</ul>
+     <ul>1/2 cup barbecue sauce</ul>
+
+     <h3>Instructions</h3>
+     <ol>In a small bowl, combine chili powder, brown sugar, cumin, garlic powder, onion powder and black pepper.</ol>
+     <ol>Cut ribs into 4 sections (if desired - you could leave them whole). Rub spice mixture over both sides of the ribs.</ol>
+     <ol>Lightly grease a 4 quart slow cooker and line the sections of ribs up around the edges (so the meaty part is pressed against the side). Cover and cook on low for 8 hours.</ol>
+     <ol>Remove from the slow cooker, brush with barbecue sauce, and grill for 5-6 minutes or broil for 2-3 minutes, until sauce is sticky and slightly caramelized. Serve.</ol>
+
+     <h2>Slow Cooker Pork Tenderloin with Honey Balsamic Glaze</h2>
+     <h3>Ingredients</h3>
+     
+     <ul>1 pork tenderloin about 1 lb</ul>
+     <ul>1 teaspoon garlic powder</ul>
+     <ul>1 teaspoon dried parsley</ul>
+     <ul>1/2 teaspoon salt</ul>
+     <ul>1/4 teaspoon black pepper</ul>
+     <ul>1/4 teaspoon onion powder</ul>
+     <ul>1.4 teaspoon paprika</ul>
+     <ul>1/3 cup low sodium chicken broth</ul>
+     <ul>2 tablespoons honey</ul>
+     <ul>3 tablespoons balsamic vinegar</ul>
+     <ul>1 tablespoon ketchup</ul>
+     <ul>2 teaspoons corn starch</ul>
+
+     <h3>Instructions</h3>
+     <ol>If your pork tenderloin is longer than your slow cooker, cut it in half crosswise (so you have two shorter pieces that will fit inside).</ol>
+     <ol>In a medium bowl, whish together the broth, honey, balsamic vinegar, kethcup and corn starch and pour into the slow cooker.</ol>
+     <ol>In a small bowl, combine garlic, parsley, salt, pepper, onion powder and paprika. Rub over all sides of the pork tenderloin and place in the slow cooker (I use a 2.5 quart oval slow cooker).</ol>
+     <ol>Cover and cook on high for 1.5-2 hours, or low for 4 hours, until a meat thermometer inserted in the thickest part reads 150-160 degrees Fahrenheit.</ol>
 </body>
 </html>
