--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <li><a href=""></a>Contact Me</li>
     </ul>
 
-    <!--<img src="" alt="Profile Picture">-->
+    <img src="https://yt3.ggpht.com/ytc/AAUvwnjKbUqszdeZZWZbP1d_GppYbOZCHJAyDqOt9JLkNQ=s48-c-k-c0x00ffffff-no-rj" alt="Profile Pic" id="iname2">
     <h1>Trevor Lane Vardeman</h1>
     <h2>Student of Computer Information Systems</h2>
 
