--- a/src/calculator.html
+++ b/src/calculator.html
@@ -6,26 +6,75 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/style/calculator.css"
         <title>My Calculator</title>
+        <script>
+            function updateDisplay(newValue){
+                var d = document.getElementById('display');
+
+                switch (newValue){
+                    case '':
+                    d.innerHTML = '';
+                    break;
+                    case '0':
+                    case '1':
+                    case '2':
+                    case '3':
+                    case '4':
+                    case '5':
+                    case '6':
+                    case '7':
+                    case '8': 
+                    case '9': 
+                        d.innerHTML += newValue;
+                        break; 
+                        case '+': 
+                        case '-':
+                        case '*': 
+                        case '/': 
+                            if (d.innerHTML.endsWith("+")){
+                                break;
+                            }
+                            else if (d.innerHTML.endsWith("-")){
+                                break;
+                            }
+                            else if (d.innerHTML.endsWith("*")){
+                                break;
+                            }
+                            else if (d.innerHTML.endsWith("/")){
+                                break;
+                            }
+                            else{
+                                d.innerHTML += newValue;
+                            }
+                            break;
+
+                            case '=':
+                               d.innerHTML = eval(newValue);
+
+                                                
+                }
+            }
+        </script>
  </head>
 <body>
 
     <div id="container">
         <div id="display"></div>
-        <div class="key plus">+</div>
-        <div class="key minus">-</div>
-        <div class="key multiply">*</div>
-        <div class="key divide">/</div>
-        <div class="key digit-0">0</div>
-        <div class="key digit-1">1</div>
-        <div class="key digit-2">2</div>
-        <div class="key digit-3">3</div>
-        <div class="key digit-4">4</div>
-        <div class="key digit-5">5</div>
-        <div class="key digit-6">6</div>
-        <div class="key digit-7">7</div>
-        <div class="key digit-8">8</div>
-        <div class="key digit-9">9</div>
-        <div class="key equal-key">=</div>
+        <div class="key plus" onclick="updateDisplay('+')">+</div>
+        <div class="key minus" onclick="updateDisplay('-')">-</div>
+        <div class="key multiply" onclick="updateDisplay('*')">*</div>
+        <div class="key divide" onclick="updateDisplay('/')">/</div>
+        <div class="key digit-0" onclick="updateDisplay('0')">0</div>
+        <div class="key digit-1" onclick="updateDisplay('1')">1</div>
+        <div class="key digit-2" onclick="updateDisplay('2')">2</div>
+        <div class="key digit-3" onclick="updateDisplay('3')">3</div>
+        <div class="key digit-4" onclick="updateDisplay('4')">4</div>
+        <div class="key digit-5" onclick="updateDisplay('5')">5</div>
+        <div class="key digit-6" onclick="updateDisplay('6')">6</div>
+        <div class="key digit-7" onclick="updateDisplay('7')">7</div>
+        <div class="key digit-8" onclick="updateDisplay('8')">8</div>
+        <div class="key digit-9" onclick="updateDisplay('9')">9</div>
+        <div class="key equal-key" onclick="updateDisplay('=')">=</div>
+        <div class="key clear-key" onclick="updateDisplay('')">AC</div>
     </div>
 
 </body>
