--- a/src/tic-tac-toe.html
+++ b/src/tic-tac-toe.html
@@ -11,16 +11,22 @@
 <body>
 
     <div id="board">
-    <div id="box-1" class="game-space"></div>
-    <div id="box-2" class="game-space"></div>
-    <div id="box-3" class="game-space"></div>
-    <div id="box-4" class="game-space"></div>
-    <div id="box-5" class="game-space"></div>
-    <div id="box-6" class="game-space"></div>
-    <div id="box-7" class="game-space"></div>
-    <div id="box-8" class="game-space"></div>
-    <div id="box-9" class="game-space"></div>
+    <div id="box-1" class="game-space" onclick="placeMarker('box-1')"></div>
+    <div id="box-2" class="game-space" onclick="placeMarker('box-2')"></div>
+    <div id="box-3" class="game-space" onclick="placeMarker('box-3')"></div>
+    <div id="box-4" class="game-space" onclick="placeMarker('box-4')"></div>
+    <div id="box-5" class="game-space" onclick="placeMarker('box-5')"></div>
+    <div id="box-6" class="game-space" onclick="placeMarker('box-6')"></div>
+    <div id="box-7" class="game-space" onclick="placeMarker('box-7')"></div>
+    <div id="box-8" class="game-space" onclick="placeMarker('box-8')"></div>
+    <div id="box-9" class="game-space" onclick="placeMarker('box-9')"></div>
+    <div id="status">Tic-Tac-Toe is a simple game where the goal is to get 3 of your markers in a row.
+        The markers can be places horizontally, veritcally, and diagonally. If neither player has 3 of their markers 
+        in a row by the time each square is filled, then the game is a tie.</div>
+    
+    <div id="start">It is Player X turn.</div>
     </div>
+    
 
 </body>
 </html>
